fix(Discover): mask was flickering

--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -32,6 +32,7 @@
             align-self: stretch;
             display: flex;
             flex-direction: column;
+            contain: strict;
 
             .meta-items-container {
                 margin-top: calc(var(--top-overlay-size) * -1);
